--- a/style.css
+++ b/style.css
@@ -4,16 +4,16 @@ body{
 }
 
 .image-holder img{
-    height:auto
-    max-width = 100%
+    height: 1000px;
+    max-width : 100px
 }
 
 .chooser button{
     padding: 10px 20px;
     margin:10px;
-    font-size:10px;
+    font-size:16px;
     color:white;
-    background-color: black;
+    background-color: red;
     cursor:pointer;
 }
 
